[metadata]
name = robotframework-remoterunner-ssl
author = Joerg Schultze-Lutter
description = A library that provides the ability to execute RobotFramework test suites on a remote host using a secure connection.
keywords=robotframework automation testautomation rpa testing acceptancetesting atdd bdd
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/joergschultzelutter/robotframework-remoterunner-ssl
project_urls =
    Issue Tracker=https://github.com/joergschultzelutter/robotframework-remoterunner-ssl/issues
    Repository=https://github.com/joergschultzelutter/robotframework-remoterunner-ssl
classifiers =
    Development Status :: 6 - Mature
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Framework :: Robot Framework
    Topic :: Software Development :: Testing

[options]
package_dir=
    =src
packages = find:
python_requires = >=3.8

install_requires =
    robotframework >= 4.0
    pyopenssl >= 22.0.0
    johnnydep >= 1.14

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    rfagent-ssl = rfremoterunner_ssl.server:run_server

[bdist_wheel]
universal = 1
